Fix for github issue https://github.com/aws-samples/amazon-sumerian-hosts/issues/8: Can't seem to switch languages using api methods

--- a/test/integration_test/three.js/three.texttospeech.html
+++ b/test/integration_test/three.js/three.texttospeech.html
@@ -192,7 +192,12 @@
           setTimeout(() => {
             console.log('TEST INTERRUPT WITH OTHER');
             speaker.TextToSpeechFeature.play(
-              'Now I will say something else, cancelling the last speech.'
+              'Now I will say something else, cancelling the last speech.',
+              {
+                Engine: 'standard',
+                Language: 'English, British',
+                VoiceId: 'Russell',
+              }
             );
           }, 4000);
 
