Update script dependency paths in examples and integration tests
Updated three.js example file to use module file imports

Added support for canceling a gesture promise. Made interval check honor force flag when playing gestures

Updated readme.md with example images and fixed minor typos/grammatical issues

--- a/test/integration_test/Babylon.js/babylon.animation.html
+++ b/test/integration_test/Babylon.js/babylon.animation.html
@@ -31,9 +31,9 @@
   </head>
 
   <body>
-    <script src="../scriptDependencies/babylon.js"></script>
-    <script src="../scriptDependencies/babylonjs.loaders.min.js"></script>
-    <script src="../scriptDependencies/dat.gui.min.js"></script>
+    <script src="https://preview.babylonjs.com/babylon.js"></script>
+    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/dat.gui.min.js"></script>
     <script type="text/javascript" src="../../../dist/host.babylon.js"></script>
     <script>
       async function main() {
