--- a/examples/babylon.html
+++ b/examples/babylon.html
@@ -117,16 +117,14 @@
       }
     </style>
 
-    <!--Enable drag and drop text files on text to speech input area-->
-    <script src="./scriptDependencies/dragDropTextArea.js"></script>
     <!--Text to speech dependency-->
     <script
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
     <!--Babylon.js dependencies-->
-    <script src="./scriptDependencies/babylon.js"></script>
-    <script src="./scriptDependencies/babylonjs.loaders.min.js"></script>
+    <script src="https://preview.babylonjs.com/babylon.js"></script>
+    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <!--Host build file-->
     <script type="text/javascript" src="../dist/host.babylon.js"></script>
   </head>
@@ -922,6 +920,36 @@
         // Initialize tab
         const tab = document.getElementsByClassName('tab current')[0];
         toggleHost({target: tab});
+      }
+
+      function enableDragDrop(className) {
+        const elements = document.getElementsByClassName(className);
+
+        for (let i = 0, l = elements.length; i < l; i += 1) {
+          const dropArea = elements[i];
+
+          // Copy contents of files into the text input once they are read
+          const fileReader = new FileReader();
+          fileReader.onload = evt => {
+            dropArea.value = evt.target.result;
+          };
+
+          // Drag and drop listeners
+          dropArea.addEventListener('dragover', evt => {
+            evt.stopPropagation();
+            evt.preventDefault();
+            evt.dataTransfer.dropEffect = 'copy';
+          });
+
+          dropArea.addEventListener('drop', evt => {
+            evt.stopPropagation();
+            evt.preventDefault();
+
+            // Read the first file that was dropped
+            const [file] = evt.dataTransfer.files;
+            fileReader.readAsText(file, 'UTF-8');
+          });
+        }
       }
     </script>
   </body>
