--- a/examples/three.html
+++ b/examples/three.html
@@ -115,17 +115,13 @@
       }
     </style>
 
-    <!--Enable drag and drop text files on text to speech input area-->
-    <script src="./scriptDependencies/dragDropTextArea.js"></script>
     <!--Text to speech dependency-->
     <script
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
     <!--Three.js dependencies-->
-    <script src="./scriptDependencies/three.min.js"></script>
-    <script src="./scriptDependencies/three.GLTFLoader.js"></script>
-    <script src="./scriptDependencies/three.OrbitControls.js"></script>
+    <script src="https://threejs.org/build/three.min.js"></script>
     <!--Host build file-->
     <script type="text/javascript" src="../dist/host.three.js"></script>
   </head>
@@ -180,7 +176,10 @@
     </div>
 
     <!--Create the Three.js scene-->
-    <script>
+    <script type="module">
+      import {OrbitControls} from 'https://threejs.org/examples/jsm/controls/OrbitControls.js';
+      import {GLTFLoader} from 'https://threejs.org/examples/jsm/loaders/GLTFLoader.js';
+
       const renderFn = [];
       const speakers = new Map([
         ['Luke', undefined],
@@ -400,7 +399,7 @@
         scene.fog = new THREE.Fog(0x33334d, 0, 10);
 
         // Renderer
-        renderer = new THREE.WebGLRenderer({antialias: true});
+        const renderer = new THREE.WebGLRenderer({antialias: true});
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.outputEncoding = THREE.sRGBEncoding;
@@ -432,7 +431,7 @@
           0.1,
           1000
         );
-        const controls = new THREE.OrbitControls(camera, renderer.domElement);
+        const controls = new OrbitControls(camera, renderer.domElement);
         camera.position.set(0, 1.4, 3.1);
         controls.target = new THREE.Vector3(0, 0.8, 0);
         controls.screenSpacePanning = true;
@@ -512,7 +511,7 @@
       ) {
         // Asset loader
         const fileLoader = new THREE.FileLoader();
-        const gltfLoader = new THREE.GLTFLoader();
+        const gltfLoader = new GLTFLoader();
 
         function loadAsset(loader, assetPath, onLoad) {
           return new Promise(resolve => {
@@ -763,7 +762,7 @@
 
           // Find each pose clip and make it additive
           config.blendStateOptions.forEach(clipConfig => {
-            clip = poiClips.find(clip => clip.name === clipConfig.clip);
+            const clip = poiClips.find(clip => clip.name === clipConfig.clip);
             THREE.AnimationUtils.makeClipAdditive(clip);
             clipConfig.clip = THREE.AnimationUtils.subclip(
               clip,
@@ -965,6 +964,36 @@
         // Initialize tab
         const tab = document.getElementsByClassName('tab current')[0];
         toggleHost({target: tab});
+      }
+
+      function enableDragDrop(className) {
+        const elements = document.getElementsByClassName(className);
+
+        for (let i = 0, l = elements.length; i < l; i += 1) {
+          const dropArea = elements[i];
+
+          // Copy contents of files into the text input once they are read
+          const fileReader = new FileReader();
+          fileReader.onload = evt => {
+            dropArea.value = evt.target.result;
+          };
+
+          // Drag and drop listeners
+          dropArea.addEventListener('dragover', evt => {
+            evt.stopPropagation();
+            evt.preventDefault();
+            evt.dataTransfer.dropEffect = 'copy';
+          });
+
+          dropArea.addEventListener('drop', evt => {
+            evt.stopPropagation();
+            evt.preventDefault();
+
+            // Read the first file that was dropped
+            const [file] = evt.dataTransfer.files;
+            fileReader.readAsText(file, 'UTF-8');
+          });
+        }
       }
     </script>
   </body>
