--- a/test/integration_test/three.js/three.texttospeech.html
+++ b/test/integration_test/three.js/three.texttospeech.html
@@ -18,9 +18,9 @@
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
-    <script src="../scriptDependencies/three.min.js"></script>
-    <script src="../scriptDependencies/three.GLTFLoader.js"></script>
-    <script src="../scriptDependencies/three.OrbitControls.js"></script>
+    <script src="https://threejs.org/build/three.min.js"></script>
+    <script src="https://threejs.org/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
     <script type="text/javascript" src="../../../dist/host.three.js"></script>
     <script>
       async function main() {
