Changed cdn import to relative import

--- a/examples/three.html
+++ b/examples/three.html
@@ -177,8 +177,8 @@
 
     <!--Create the Three.js scene-->
     <script type="module">
-      import {OrbitControls} from 'https://threejs.org/examples/jsm/controls/OrbitControls.js';
-      import {GLTFLoader} from 'https://threejs.org/examples/jsm/loaders/GLTFLoader.js';
+      import {OrbitControls} from '../src/three.js/examples/jsm/controls/OrbitControls.js';
+      import {GLTFLoader} from '../src/three.js/examples/jsm/loaders/GLTFLoader.js';
 
       const renderFn = [];
       const speakers = new Map([
