--- a/test/integration_test/Babylon.js/babylon.texttospeech.html
+++ b/test/integration_test/Babylon.js/babylon.texttospeech.html
@@ -14,8 +14,8 @@
       type="text/javascript"
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
-    <script src="https://preview.babylonjs.com/babylon.js"></script>
-    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.1/babylon.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs-loaders@4.2.1/babylonjs.loaders.min.js"></script>
     <script type="text/javascript" src="../../../dist/host.babylon.js"></script>
     <script>
       async function main() {
