--- a/examples/babylon.html
+++ b/examples/babylon.html
@@ -123,8 +123,8 @@
       src="https://sdk.amazonaws.com/js/aws-sdk-2.645.0.min.js"
     ></script>
     <!--Babylon.js dependencies-->
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.1/babylon.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs-loaders@4.2.1/babylonjs.loaders.min.js"></script>
     <!--Host build file-->
     <script type="text/javascript" src="../dist/host.babylon.js"></script>
   </head>
