--- a/test/integration_test/Babylon.js/babylon.animation.html
+++ b/test/integration_test/Babylon.js/babylon.animation.html
@@ -31,9 +31,9 @@
   </head>
 
   <body>
-    <script src="https://preview.babylonjs.com/babylon.js"></script>
-    <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://threejs.org/examples/js/libs/dat.gui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.1/babylon.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs-loaders@4.2.1/babylonjs.loaders.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.127.0/examples/js/libs/dat.gui.min.js"></script>
     <script type="text/javascript" src="../../../dist/host.babylon.js"></script>
     <script>
       async function main() {
