--- a/packages/amazon-sumerian-hosts-babylon/examples/babylon.html
+++ b/packages/amazon-sumerian-hosts-babylon/examples/babylon.html
@@ -191,13 +191,9 @@
 
       async function main() {
         // Initialize AWS and create Polly service objects
-        // window.AWS.config.region = 'us-west-2';
-        // window.AWS.config.credentials = new AWS.CognitoIdentityCredentials({
-        //   IdentityPoolId: '<Enter Cognito Identity Pool ID here>',
-        // });
-        window.AWS.config.region = 'ap-southeast-2';
+        window.AWS.config.region = 'us-west-2';
         window.AWS.config.credentials = new AWS.CognitoIdentityCredentials({
-          IdentityPoolId: 'ap-southeast-2:5795967b-9ce0-4092-a742-28425fec95a6',
+          IdentityPoolId: '<Enter Cognito Identity Pool ID here>',
         });
         const polly = new AWS.Polly();
         const presigner = new AWS.Polly.Presigner();
